auth con logout swagger response handled
